--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-numpy
-tensorflow
-google-api-python-client
-h5py
-pillow
-protobuf
+streamlit==1.25.0
+numpy==1.24.0
+tensorflow==2.14.0
+google-api-python-client==2.89.0
+h5py==3.8.0
+pillow==9.5.0
+protobuf==3.20.3
